--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
+    "lint": "eslint '**/*.js'",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.11.0",
+    "jest": "^26.6.0",
+    "supertest": "^5.0.0"
   }
 }
