--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   },
   "homepage": "https://github.com/Abdallah-Zakaria/api-server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.11.0",
